--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -3,7 +3,7 @@ html {
 }
 
 .selection {
-    background-color: #33333d;
+    background-color: #2c2219;
     padding: 0px 4px;
     letter-spacing: 0.5px;
     border-radius: var(--small-border-radius);
@@ -92,7 +92,7 @@ h4 {
 }
 
 .contents {
-    background-color: #474753;
+    background-color: #36291f;
     border-radius: var(--medium-border-radius);
     font-family: var(--font-family);
     color: var(--paragraph-color);
@@ -116,7 +116,7 @@ h4 {
 .toctitle {
     color: var(--paragraph-color);
     font-weight: 700;
-    background-color: #33333d;
+    background-color: #2c2219;
     width: 100%;
     padding: 15px 0px;
     border-radius: 6px 6px 0% 0%;
