--- a/css/footer.css
+++ b/css/footer.css
@@ -1,14 +1,13 @@
 .footer {
     margin: 0;
-    margin: 20px;
-    border-radius: 0% 0% 0.5rem 0.5rem / 0% 0% 25% 25%;
     display: flex;
     flex-direction: row;
     align-content: center;
     justify-content: center;
     align-items: center;
-    padding: 0 0.5rem;
+    padding: 20px 0.5rem;
     gap: 20px;
+    background-color: #1a1108; /* Добавленное свойство */
 }
 
 .footertext {
@@ -19,10 +18,9 @@
     justify-content: center;
     text-align: center;
     gap: 0.2rem;
-    color: #b0bac53b;
+    color: #b0bac5;
     font-family: var(--font-family);
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
 }
-
