--- a/css/header.css
+++ b/css/header.css
@@ -1,15 +1,18 @@
 .header {
-    margin: 0;
-    width: 100%;
+    top: 0; /* Прикрепляем к верху страницы */
+    left: 0; /* Прикрепляем к левому краю */
+    width: 100%; /* Задаем ширину на всю страницу */
     min-height: 42px;
     margin-bottom: 20px;
-    border-radius: 0% 0% 0.5rem 0.5rem / 0% 0% 25% 25%;
+    border-radius: 0% 0% 0.5rem 0.5rem / 0% 0% 0% 0%;
     display: flex;
     flex-direction: row;
     align-content: center;
     padding: 0.5rem 0;
     gap: 20px;
     align-items: center;
+    background-color: #1a1108; /* Добавляем фон */
+    z-index: 1000; /* Добавляем z-index чтобы хэдер был поверх других элементов */
 }
 
 .logo {
