--- a/css/footer.css
+++ b/css/footer.css
@@ -1,13 +1,15 @@
 .footer {
     margin: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    height: 5vh;
     align-content: center;
     justify-content: center;
     align-items: center;
     padding: 20px 0.5rem;
     gap: 20px;
     background-color: #1a1108; /* Добавленное свойство */
+    margin-top: auto;
 }
 
 .footertext {
